z-index correction

--- a/ressources/docs-builder/styles/_config.scss
+++ b/ressources/docs-builder/styles/_config.scss
@@ -80,3 +80,11 @@ $docs-main-external-size: .8rem;   // stylelint-disable-line unit-whitelist
 $docs-footer-bg-color:   $palette-brand-victoria;
 $docs-footer-text-color: $palette-white-rabbit-in-the-snow;
 $docs-footer-link-color: $palette-brand-sockeye;
+
+
+
+
+
+
+//-- Footer
+$docs-header-zindex: 1;
